# NyayaSetu

./: .gitignore
backend/: .gitignore  agent.py  agent_core.py  gemini_agent.py  gemini_agent_core.py  indian_kanoon_lib.py  ipc_bns_mappings.json  mapper.py  pyproject.toml  server.py  whatsapp_bot.py
backend/Indian Kanoon/: case2.py  fetch_cases.py  kanoon_tools.py
backend/RAG Builder/: bns_data.json  hybrid retriveal.py  ipc_bns_mappings.json  mapper.py  train_IT_Act_db.py  train_ipc_db.py
backend/RAG_Builder/: IT_Act.json  mappings.csv  test_db.py  train_bns_db.py
backend_doc/: embeddings.py  gg.py  ingest.py  main.py  model.py  pyproject.toml  query.py  requirements.txt  server.py
backend_doc/chroma/: chroma.sqlite3
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/case-law/: page.tsx
frontend/src/app/comparator/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/comparator/: ComparatorView.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/research/: CaseLawCard.tsx  CitationBadge.tsx
frontend/src/components/ui/: resizable.tsx
