[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "deep-translator>=1.11.4",
    "fastapi>=0.128.0",
    "groq>=0.37.1",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.6",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
]
